--- a/blog/templates/blog/all_blogs.html
+++ b/blog/templates/blog/all_blogs.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Личный блог</title>
 </head>
 <body>
-$END$
+<h1>Мои блоги</h1>
+{% for post in posts %}
+    <div>
+        <h3>{{ post.title }}</h3>
+        <h5>{{ post.date }}</h5>
+        <p>{{ post.text }}</p>
+    </div>
+{% endfor %}
 </body>
 </html>
