--- a/blog/templates/blog/all_blogs.html
+++ b/blog/templates/blog/all_blogs.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Личный блог</title>
-</head>
-<body>
+{% extends 'portfolio/base.html' %}
+{% block content %}
+   <div class="container text-center">
 <h1>Мои блоги</h1>
+<h2>Сергей написал {{ posts.count }} статей</h2>
+   <hr>
+   </div>
 {% for post in posts %}
-    <div>
-        <h3>{{ post.title }}</h3>
-        <h5>{{ post.date }}</h5>
-        <p>{{ post.text }}</p>
+    <div class="container text-left">
+        <a href="{% url 'blog:detail' post.id %}"><h2>{{ post.title }}</h2></a>
+        <h7>{{ post.date|date:'d.m.Y'|upper }}</h7>
+        <p>{{ post.text|striptags|truncatechars:155 }}</p>
+    <hr>
     </div>
+
 {% endfor %}
-</body>
-</html>
+{% endblock %}
